# WC2026-typer

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  deploy.sh  messages.pot  pyproject.toml  wc2026.service  wsgi.py
.github/workflows/: deploy.yml
app/: __init__.py  models.py  scheduler.py  scoring.py
app/admin/: routes.py
app/api/: client.py
app/auth/: forms.py  routes.py
app/main/: routes.py
app/predict/: __init__.py  forms.py  routes.py
app/templates/: base.html
app/templates/admin/: dashboard.html  set_result.html  settings.html  users.html
app/templates/auth/: login.html  register.html
app/templates/main/: index.html  leaderboard.html  match_detail.html  matches.html  profile.html  rules.html
app/templates/predict/: champion.html
app/translations/pl/LC_MESSAGES/: messages.mo  messages.po
migrations/versions/: b9d81d355718_initial_schema.py
scripts/: init_tournament.py
tests/: conftest.py  test_auth.py  test_scoring.py
