[project]
name = "wc2026-typer"
version = "0.1.0"
description = "Football World Cup 2026 prediction game"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1,<4.0",
    "flask-sqlalchemy>=3.1,<4.0",
    "flask-migrate>=4.0,<5.0",
    "flask-login>=0.6,<1.0",
    "flask-wtf>=1.2,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic-settings>=2.3,<3.0",
    "bcrypt>=4.1,<5.0",
    "gunicorn>=22.0,<23.0",
    "psycopg2-binary>=2.9,<3.0",
    "wtforms>=3.1,<4.0",
    "email-validator>=2.1,<3.0",
    "flask-babel>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-flask>=1.3,<2.0",
    "ruff>=0.5,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
